--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -107,7 +107,7 @@ section {
 }
 body {
   line-height: 1;
-  font-family: 'Lato', sans-serif;
+  font-family: 'Inter', sans-serif;
 }
 ol,
 ul {
@@ -288,10 +288,11 @@ h5 {
 */
 .achievement {
   text-align: center;
+  font-weight: bold;
 }
 
 .container-720 {
-  width: 936px;
+  width: 960px;
 }
 
 .three-cols h1 {
@@ -304,4 +305,106 @@ h5 {
   text-transform: uppercase;
   margin-top: 20px;
   color: #666;
+}
+
+/*
+	========================================
+	Mission
+	========================================
+*/
+.mission {
+  background-color: #fbebf1;
+  margin: 0 auto;
+  height: 240px;
+  border-radius: 16px;
+  text-align: center;
+  font-size: 20px;
+  margin-left: 50px;
+  margin-right: 50px;
+  line-height: 165.24%;
+  font-weight: 400;
+}
+
+.mission .content {
+  padding: 48px 64px;
+}
+
+.content h3 {
+  color: #d74b8d;
+  font-weight: bold;
+  text-transform: uppercase;
+  padding-bottom: 16px;
+  letter-spacing: 1px;
+}
+
+/*
+	========================================
+	Superhero
+	========================================
+*/
+.two-cols section {
+  margin-top: 50px;
+  line-height: 165.24%;;
+}
+
+.two-cols section h1 {
+  text-transform: capitalize;
+  color: #d74b8d;
+  font-weight: bold;
+  margin-bottom: 10px;
+  text-align: center;
+} 
+
+.two-cols section p {
+  color: #666;
+}
+
+#super-hero {
+  height: 504px;
+}
+
+/*
+	========================================
+	Image gallery
+	========================================
+*/
+.image-gallery {
+  background-color: #fbebf1;
+  height: 680px;
+}
+
+.image-gallery h1 {
+  width: 275px;
+  margin: 0 auto;
+  font-size: 30px;
+  color: #d74b8d;
+  font-weight: 800;
+  text-transform: uppercase;
+  border-bottom: 5px dashed #572d5f;
+  line-height: 2.5rem;
+  letter-spacing: 2px;
+}
+
+.image-gallery .content {
+  padding: 50px;
+}
+
+.images {
+  text-align: center;
+}
+
+#main-image {
+  width: 50%;
+  margin-top: 20px;
+}
+
+nav {
+  margin-top: 20px;
+}
+
+nav img {
+  width: 150px;
+  height: 90px;
+  margin-left: 20px;
+  margin-right: 20px;
 }
